# rule4be

./: .dockerignore  .env.swp  .gitignore  Dockerfile  Procfile  db.sqlite3  docker-compose.yaml  entrypoint.sh  manage.py  package-lock.json  package.json  piet-db.sqlite3  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: deploy-production.yaml
rule4be/: .gitignore  apps.py  asgi.py  page_views.py  password_reset_views.py  serializers.py  ses.py  settings.py  signals.py  stripe_views.py  urls.py  wsgi.py
rule4be/k8s/production/: configmap.yaml  deployment.yaml  ingress.yaml  managed-certificate.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
rule4be/k8s/stage/: configmap.yaml  deployment.yaml  ingress.yaml  managed-certificate.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
rule4be/management/commands/: send_test_email.py
rule4be/templates/rule4be/: aols.html  archived_aol_snapshots.html  archived_aols.html  cancel.html  create_aol.html  create_snapshot.html  delete_aol.html  edit_aol.html  loading-spinner.html  login.html  login_form.html  login_signup_section.html  main.html  privacy_policy.html  profile.html  signup.html  subscribe.html  success.html  terms_and_conditions.html  today.html  trial_expired.html
rule4be/templatetags/: custom_filters.py
snapshots/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
snapshots/migrations/: 0001_initial.py  0002_alter_snapshot_created.py  0003_snapshot_image_snapshot_video.py  0004_alter_snapshot_image_alter_snapshot_video.py  0005_alter_snapshot_body.py  0006_areaoflife_is_archived.py
static/css/tailwind/: tailwind-output.css
static/js/: form-validation.js  global.js
static/tailwind/: tailwind-input.css
staticfiles/: staticfiles.json
staticfiles/css/: styles.175d369ce383.css  styles.3d17001beffd.css  styles.46f299f4c995.css  styles.c45f66a69a89.css  styles.d7317930fdc1.css
staticfiles/fontawesome/css/: all.9107a60c2cab.css  all.min.1043a7ea2329.css  brands.92b65ea3a217.css  brands.min.61e6d29550f5.css  duotone.cfd25fa05cac.css  duotone.min.93572a282153.css  light.aa08d267c0c3.css  light.min.e92d1d641cd4.css  regular.103f6fcb4a7a.css  regular.min.4b6adf9185a7.css  sharp-light.64399fda56ab.css  sharp-light.min.8660919a87ff.css  sharp-regular.d589b992d243.css  sharp-regular.min.e1ed73df4b2b.css  sharp-solid.004578d52416.css  sharp-solid.min.afabf9819d00.css  sharp-thin.dea5d288f9dd.css  sharp-thin.min.18beb7a82d60.css  solid.0c1751f4b6c9.css  solid.min.fdb9fca8c683.css  thin.9ffd763d9c10.css  thin.min.5afd388032fb.css  v4-font-face.397c073cefb8.css  v4-font-face.min.0568b1e8f832.css  v5-font-face.2633fc583cf5.css  v5-font-face.min.7a4cef33cff2.css
staticfiles/tailwind/: tailwind-input.css
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_userprofile_subscription_activation_date_and_more.py  0003_alter_userprofile_account_status.py  0004_checkoutsessionrecord.py
users/templates/registration/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
users/templates/users/: password_reset_complete.html  password_reset_confirm.html  (+3 more)
(+4 files in other folders)
