# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-django-project" # CHANGE THIS to your actual project name
version = "0.1.0"          # CHANGE THIS to your project version
description = "My Django project using uv." # Optional: Add description
requires-python = ">=3.9"  # Adjust if you support older/newer Python

# Core application dependencies (Review this list carefully!)
dependencies = [
    # Django Core & Frameworks
    "Django>=4.2.4,<4.3", # Or "<5.0" if you test with 4.x series
    "djangorestframework>=3.14.0,<3.15",
    "setuptools",

    # Django Plugins & Helpers
    "django-cors-headers>=4.2.0,<4.3",
    "django-environ>=0.11.2,<0.12",   # Manages environment variables
    "django-filter>=23.2,<24.0",
    "django-storages[boto3]>=1.14.2,<1.15", # Added [boto3] extra for S3
    "django-ses>=3.5.2,<3.6",          # For AWS SES email
    "dj-database-url>=2.1.0,<2.2",    # DB URL parsing

    # Authentication / Authorization
    "djangorestframework-jwt>=1.11.0,<1.12", # Older JWT - Check if really needed, see note 4
    "djangorestframework-simplejwt>=5.3.0,<5.4", # Newer JWT
    "PyJWT>=1.7.1,<1.8",                  # Needed by drf-jwt - Check if really needed, see note 4
    "python3-openid>=3.2.0,<3.3",
    "requests-oauthlib>=1.3.1,<1.4",

    # Database Driver (using modern psycopg)
    "psycopg[binary]>=3.1.10,<3.2", # Use [binary] or [c] extra depending on needs

    # WSGI Server
    "gunicorn>=21.2.0,<22.0",

    # Static Files
    "whitenoise[brotli]>=6.5.0,<6.6", # Added [brotli] extra as it's common

    # AWS SDK (indirectly needed by django-storages[boto3])
    # "boto3>=1.29.7,<1.30", # Often better handled as transitive via django-storages[boto3] extra
                              # Only list directly if you use boto3 for OTHER things too.

    # Payments
    "stripe>=8.0,<9.0",
    "cryptography>=41.0,<43.0",

    # Utilities
    "requests>=2.31.0,<2.32",
    "pillow>=10.3.0,<11.0", # Image handling
    "python-dateutil>=2.8.2,<2.9", # Often transitive, but sometimes used directly
    "python-decouple>=3.8,<3.9",    # Config - check if needed alongside django-environ
    "python-dotenv>=1.0.0,<1.1",    # Often used with decouple/django-environ
    "Markdown>=3.4.4,<3.5",        # If you render Markdown content
    "urllib3>=1.26.1,<2.0",

]

[project.optional-dependencies]
# Add development/testing specific dependencies here
dev = [
    # "pytest>=7.0,<8.0",
    # "pytest-django>=4.5,<4.6",
    # "django-debug-toolbar>=1.11,<1.12",
    "ruff",
    "black",
    # Add others like factory-boy, coverage, etc.
]

[project.urls] # Optional: Links for PyPI
Homepage = "https://example.com/my-django-project" # CHANGE THIS
Repository = "https://github.com/user/my-django-project" # CHANGE THIS

# Optional: If you want 'pip install -e .' to work or build packages
# [tool.setuptools.packages.find]
# where = ["src"]  # Or ["."] if your code is not in a src directory

# Optional: Configure tools like Ruff, Pytest, MyPy etc. here
# [tool.ruff]
# ...
# [tool.pytest.ini_options]
# ...